--- a/play2.ipynb
+++ b/play2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "ec032a0b",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 96,
    "id": "508e81de",
    "metadata": {},
    "outputs": [
@@ -24,60 +24,233 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Ben\\AppData\\Local\\Temp\\ipykernel_1712\\1427075461.py:1: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
-      "  spy = yf.download('SPY', period='1wk', interval='1m')\n",
-      "[*********************100%***********************]  1 of 1 completed"
+      "C:\\Users\\Ben\\AppData\\Local\\Temp\\ipykernel_1712\\439698870.py:1: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+      "  spy = yf.download('SPY', period='2y', interval='1h')\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "C:\\Users\\Ben\\AppData\\Local\\Temp\\ipykernel_1712\\439698870.py:12: RuntimeWarning: divide by zero encountered in scalar divide\n",
+      "  profit_factor = r[r>0].sum() / r[r<0].abs().sum()\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Price                           Close        High         Low        Open  \\\n",
-      "Datetime                                                                    \n",
-      "2025-06-16 13:30:00+00:00  600.960022  600.960022  600.219971  600.400024   \n",
-      "2025-06-16 13:31:00+00:00  601.150024  601.280029  600.929993  600.969971   \n",
-      "2025-06-16 13:32:00+00:00  601.200012  601.530029  601.140015  601.140015   \n",
-      "2025-06-16 13:33:00+00:00  601.479980  601.500000  601.190002  601.210022   \n",
-      "2025-06-16 13:34:00+00:00  601.525024  601.549988  601.370117  601.489990   \n",
-      "...                               ...         ...         ...         ...   \n",
-      "2025-06-20 19:55:00+00:00  594.669983  594.969971  594.169983  594.200012   \n",
-      "2025-06-20 19:56:00+00:00  594.549988  594.880005  594.530029  594.669983   \n",
-      "2025-06-20 19:57:00+00:00  594.135193  594.580017  594.109985  594.554993   \n",
-      "2025-06-20 19:58:00+00:00  594.164978  594.270020  594.109985  594.140015   \n",
-      "2025-06-20 19:59:00+00:00  594.219971  594.549988  593.780029  594.159973   \n",
-      "\n",
-      "Price                       Volume  \n",
-      "Datetime                            \n",
-      "2025-06-16 13:30:00+00:00  2415426  \n",
-      "2025-06-16 13:31:00+00:00   391986  \n",
-      "2025-06-16 13:32:00+00:00   393282  \n",
-      "2025-06-16 13:33:00+00:00   400539  \n",
-      "2025-06-16 13:34:00+00:00   266812  \n",
-      "...                            ...  \n",
-      "2025-06-20 19:55:00+00:00   963929  \n",
-      "2025-06-20 19:56:00+00:00   586452  \n",
-      "2025-06-20 19:57:00+00:00   848259  \n",
-      "2025-06-20 19:58:00+00:00   896655  \n",
-      "2025-06-20 19:59:00+00:00  2621220  \n",
-      "\n",
-      "[1543 rows x 5 columns]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Price</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>signal</th>\n",
+       "      <th>return</th>\n",
+       "      <th>strategy_return</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Datetime</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2023-06-21 13:30:00+00:00</th>\n",
+       "      <td>435.340088</td>\n",
+       "      <td>436.279999</td>\n",
+       "      <td>434.380005</td>\n",
+       "      <td>436.160004</td>\n",
+       "      <td>12602963</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6.076081</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-06-21 14:30:00+00:00</th>\n",
+       "      <td>435.320007</td>\n",
+       "      <td>435.677795</td>\n",
+       "      <td>434.329987</td>\n",
+       "      <td>435.505005</td>\n",
+       "      <td>10318532</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6.077367</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-06-21 15:30:00+00:00</th>\n",
+       "      <td>435.880005</td>\n",
+       "      <td>436.209991</td>\n",
+       "      <td>435.049988</td>\n",
+       "      <td>435.329987</td>\n",
+       "      <td>7243520</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6.075599</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-06-21 16:30:00+00:00</th>\n",
+       "      <td>435.109985</td>\n",
+       "      <td>436.170013</td>\n",
+       "      <td>434.869995</td>\n",
+       "      <td>435.890015</td>\n",
+       "      <td>7159909</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6.079200</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-06-21 17:30:00+00:00</th>\n",
+       "      <td>436.679901</td>\n",
+       "      <td>436.700012</td>\n",
+       "      <td>435.010010</td>\n",
+       "      <td>435.105011</td>\n",
+       "      <td>6660049</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6.077000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-06-20 15:30:00+00:00</th>\n",
+       "      <td>594.929993</td>\n",
+       "      <td>596.369995</td>\n",
+       "      <td>594.224976</td>\n",
+       "      <td>595.450012</td>\n",
+       "      <td>15406731</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6.386130</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-06-20 16:30:00+00:00</th>\n",
+       "      <td>593.554993</td>\n",
+       "      <td>595.969971</td>\n",
+       "      <td>593.539978</td>\n",
+       "      <td>594.919983</td>\n",
+       "      <td>7724499</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6.388360</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-06-20 17:30:00+00:00</th>\n",
+       "      <td>594.880005</td>\n",
+       "      <td>595.349976</td>\n",
+       "      <td>592.859985</td>\n",
+       "      <td>593.544983</td>\n",
+       "      <td>7372133</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6.385987</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-06-20 18:30:00+00:00</th>\n",
+       "      <td>593.469971</td>\n",
+       "      <td>595.224976</td>\n",
+       "      <td>593.239990</td>\n",
+       "      <td>594.880005</td>\n",
+       "      <td>7776578</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6.387250</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-06-20 19:30:00+00:00</th>\n",
+       "      <td>594.219971</td>\n",
+       "      <td>594.969971</td>\n",
+       "      <td>593.250000</td>\n",
+       "      <td>593.460022</td>\n",
+       "      <td>13400392</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3494 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Price                           Close        High         Low        Open  \\\n",
+       "Datetime                                                                    \n",
+       "2023-06-21 13:30:00+00:00  435.340088  436.279999  434.380005  436.160004   \n",
+       "2023-06-21 14:30:00+00:00  435.320007  435.677795  434.329987  435.505005   \n",
+       "2023-06-21 15:30:00+00:00  435.880005  436.209991  435.049988  435.329987   \n",
+       "2023-06-21 16:30:00+00:00  435.109985  436.170013  434.869995  435.890015   \n",
+       "2023-06-21 17:30:00+00:00  436.679901  436.700012  435.010010  435.105011   \n",
+       "...                               ...         ...         ...         ...   \n",
+       "2025-06-20 15:30:00+00:00  594.929993  596.369995  594.224976  595.450012   \n",
+       "2025-06-20 16:30:00+00:00  593.554993  595.969971  593.539978  594.919983   \n",
+       "2025-06-20 17:30:00+00:00  594.880005  595.349976  592.859985  593.544983   \n",
+       "2025-06-20 18:30:00+00:00  593.469971  595.224976  593.239990  594.880005   \n",
+       "2025-06-20 19:30:00+00:00  594.219971  594.969971  593.250000  593.460022   \n",
+       "\n",
+       "Price                        Volume  signal    return  strategy_return  \n",
+       "Datetime                                                                \n",
+       "2023-06-21 13:30:00+00:00  12602963       0  6.076081              0.0  \n",
+       "2023-06-21 14:30:00+00:00  10318532       0  6.077367              0.0  \n",
+       "2023-06-21 15:30:00+00:00   7243520       0  6.075599              0.0  \n",
+       "2023-06-21 16:30:00+00:00   7159909       0  6.079200              0.0  \n",
+       "2023-06-21 17:30:00+00:00   6660049       0  6.077000              0.0  \n",
+       "...                             ...     ...       ...              ...  \n",
+       "2025-06-20 15:30:00+00:00  15406731       0  6.386130              0.0  \n",
+       "2025-06-20 16:30:00+00:00   7724499       0  6.388360              0.0  \n",
+       "2025-06-20 17:30:00+00:00   7372133       0  6.385987              0.0  \n",
+       "2025-06-20 18:30:00+00:00   7776578       0  6.387250              0.0  \n",
+       "2025-06-20 19:30:00+00:00  13400392       0       NaN              NaN  \n",
+       "\n",
+       "[3494 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "spy = yf.download('SPY', period='1wk', interval='1m')\n",
+    "spy = yf.download('SPY', period='2y', interval='1h')\n",
     "if isinstance(spy.columns, pd.MultiIndex):\n",
     "    spy.columns = spy.columns.get_level_values(0)\n",
-    "spy['Volume'].mean()\n",
-    "print(spy)"
+    "\n",
+    "fast_ma = spy['Close'].rolling(10).mean()\n",
+    "slow_ma = spy['Close'].rolling(30).mean()\n",
+    "spy['signal'] = np.where(fast_ma > slow_ma, 1 , 0)\n",
+    "\n",
+    "spy['return'] = np.log(spy['Close']).shift(-1)\n",
+    "spy['strategy_return'] = spy['signal'] * spy['return'] \n",
+    "r = spy['strategy_return']\n",
+    "profit_factor = r[r>0].sum() / r[r<0].abs().sum()\n",
+    "spy"
    ]
   },
   {
@@ -135,58 +308,6 @@
     "spy['Daily Return'] = (spy['Close'] - spy['Open']) / spy['Open']\n",
     "spy['Daily Return'].corr(spy['Volume'])\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "id": "ea7fbb0e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Datetime\n",
-       "2025-06-16 13:30:00+00:00    0\n",
-       "2025-06-16 13:31:00+00:00    0\n",
-       "2025-06-16 13:32:00+00:00    0\n",
-       "2025-06-16 13:33:00+00:00    0\n",
-       "2025-06-16 13:34:00+00:00    0\n",
-       "                            ..\n",
-       "2025-06-20 19:55:00+00:00    1\n",
-       "2025-06-20 19:56:00+00:00    1\n",
-       "2025-06-20 19:57:00+00:00    1\n",
-       "2025-06-20 19:58:00+00:00    1\n",
-       "2025-06-20 19:59:00+00:00    1\n",
-       "Name: signal, Length: 1543, dtype: int32"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fast_ma = spy['Close'].rolling(10).mean()\n",
-    "slow_ma = spy['Close'].rolling(30).mean()\n",
-    "spy['signal'] = np.where(fast_ma > slow_ma, 1 , 0)\n",
-    "spy['signal']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6562b045",
-   "metadata": {},
-   "source": [
-    "spy['return'] = np.log(spy['Close']).shift(-1)\n",
-    "spy['strategy return'] = spy['signal'] * spy['return'] \n",
-    "r = spy['strategy_return']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1bcf19a6",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
